<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_courses"
        android:icon="@drawable/ic_courses"
        android:title="@string/tab_courses" />

    <item
        android:id="@+id/tab_reviews"
        android:icon="@drawable/ic_reviews"
        android:title="@string/tab_reviews" />

    <item
        android:id="@+id/tab_mentor"
        android:icon="@drawable/ic_mentor"
        android:title="@string/tab_mentor" />

    <item
        android:id="@+id/tab_company"
        android:icon="@drawable/ic_company"
        android:title="@string/tab_company" />

    <item
        android:id="@+id/tab_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/tab_profile" />

</menu>