<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="f"
            type="com.base.android.ui.main.account.profile.ProfileFragment" />

        <variable
            name="vm"
            type="com.base.android.ui.main.account.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background">

        <!-- Header Bar -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/profile_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- User Info Container -->
        <LinearLayout
            android:id="@+id/layout_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@drawable/bg_login_input"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <FrameLayout
                android:id="@+id/layout_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> f.onAvatarClick()}">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/_64sdp"
                    android:layout_height="@dimen/_64sdp"
                    android:background="@drawable/bg_toast_normal"
                    android:contentDescription="@string/profile_title"
                    android:padding="@dimen/_14sdp"
                    android:src="@drawable/ic_profile"
                    app:tint="@color/white" />

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/bg_circle_camera"
                    android:contentDescription="@string/choose_avatar_title"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_camera"
                    app:tint="@color/white" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/login_label_username"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Logout Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:backgroundTint="#E53935"
            android:onClick="@{() -> f.handleLogout()}"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/login_button_corner_radius"
            app:icon="@drawable/ic_logout"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/_8sdp"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>