<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_24sdp">

    <View
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_drag_handle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/choose_language_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:fontFamily="@font/sf_pro_display_semibold"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:textFontWeight="600" />

    <!-- Option: Vietnamese -->
    <LinearLayout
        android:id="@+id/btn_lang_vi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_14sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/language_vi"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:fontFamily="@font/sf_pro_display_medium"
            android:fontFamily="@font/sf_pro_display_medium"
            android:textFontWeight="500" />

        <ImageView
            android:id="@+id/iv_check_vi"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_check_circle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="#2E3542" />

    <!-- Option: English -->
    <LinearLayout
        android:id="@+id/btn_lang_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_14sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/language_en"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:fontFamily="@font/sf_pro_display_medium"
            android:fontFamily="@font/sf_pro_display_medium"
            android:textFontWeight="500" />

        <ImageView
            android:id="@+id/iv_check_en"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_circle_outline" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="#2E3542" />

    <!-- Option: Cancel -->
    <LinearLayout
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#9CA3AF"
            android:textSize="16sp"
            app:fontFamily="@font/sf_pro_display_medium"
            android:fontFamily="@font/sf_pro_display_medium"
            android:textFontWeight="500" />
    </LinearLayout>

</LinearLayout>
